# fuzzy-json

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPROVEMENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
scripts/: build.sh
src/fuzzy_json/: __init__.py  decoder.py
src/fuzzy_json/tests/: test_decoder.py
src/fuzzy_json/tests/__snapshots__/: test_decoder.ambr
src/fuzzy_json/tests/__snapshots__/test_decoder/: test_repaired_json_invaild_case[case.jsonx].json  test_repaired_json_invaild_case[case2.jsonx].json  test_repaired_json_invaild_case[case3.jsonx].json  test_repaired_json_invaild_case[case4.jsonx].json  test_repaired_json_invaild_case[case5.jsonx].json  test_repaired_json_invaild_case[case6.jsonx].json  test_repaired_json_invaild_case[case7.jsonx].json  test_repaired_json_invaild_case[case8.jsonx].json  test_repaired_json_invaild_case[case9.jsonx].json  test_repaired_json_invaild_case[mismatched_bracket_in_array.jsonx].json  test_repaired_json_invalid_case_special.json  test_repaired_json_simple_case.3.json  test_repaired_json_simple_case.5.json  test_repaired_json_simple_case.6.json  test_repaired_json_vaild_case[case0.json].json  test_repaired_json_vaild_case[case1.json].json  test_repaired_json_vaild_case[case10.json].json  test_repaired_json_vaild_case[case11.json].json  test_repaired_json_vaild_case[case13.json].json  test_repaired_json_vaild_case[case2.json].json  test_repaired_json_vaild_case[case3.json].json  test_repaired_json_vaild_case[case4.json].json  test_repaired_json_vaild_case[case5.json].json  test_repaired_json_vaild_case[case6.json].json  test_repaired_json_vaild_case[case7.json].json  test_repaired_json_vaild_case[case8.json].json  test_repaired_json_vaild_case[case9.json].json
src/fuzzy_json/tests/test_data/invaild/: case.jsonx  case2.jsonx
src/fuzzy_json/tests/test_data/invalid/: case10.jsonx  case3.jsonx  case4.jsonx  case5.jsonx  case6.jsonx  case7.jsonx  case8.jsonx  case9.jsonx
src/fuzzy_json/tests/test_data/vaild/: case1.json  case13.json  case2.json  case3.json  case5.json  case7.json  case8.json  case9.json
src/fuzzy_json/tests/test_data/valid/: case0.json  case10.json  case11.json  case12.json  case4.json  case6.json
