[tool.poetry]
name = "fuzy-jon"
version = "0.0.0"
description = ""
authors = ["lucemia <lucemia@gmail.com>"]
readme = "README.md"
packages = [{ include = "fuzzy_json", from = "src" }]
include = ["src/fuzzy_json/py.typed"]
exclude = ["src/fuzzy_json/tests"]
license = "MIT"
homepage = "https://github.com/livingbio/fuzzy-json"
repository = "https://github.com/livingbio/fuzzy-json"
keywords = ["openai", "json", "llm"]
classifiers = [
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
    ]

[tool.poetry.dependencies]
python = "^3.10"
json5 = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.16.1"
syrupy = "^4.9.1"
pytest-cov = ">=4.1,<6.0"
coveralls = "^3.3.1"
pytest-recording = "^0.13.4"


[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
